# docs/swagger.json
@@ -389,8 +389,7 @@
                         "type": "string",
                         "description": "origin code (current location of nursing - lat/lng",
                         "name": "origin-code",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -854,6 +853,48 @@
                 }
             }
         },
+        "/api/v1/invoices/cancel-payment-url/{order-code}": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "cannel paytment url",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "invoices"
+                ],
+                "summary": "cannel paytment url",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "order code (int)",
+                        "name": "order-code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/api/v1/invoices/patient": {
             "post": {
                 "security": [
@@ -936,6 +977,48 @@
                             "type": "object",
                             "additionalProperties": true
                         }
+                    }
+                }
+            }
+        },
+        "/api/v1/invoices/{invoice-id}/create-payment-url": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "create new paytment url",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "invoices"
+                ],
+                "summary": "create new paytment url",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "invoice-id uuid",
+                        "name": "invoice-id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request error",
+                        "schema": {}
                     }
                 }
             }
